--- a/static/production/index.html
+++ b/static/production/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" href="images/favicon.ico" type="image/ico" />
 
-    <title>Tron Monitor </title>
+    <title>Monitor </title>
 
     <!-- Bootstrap -->
     <link href="../vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -36,7 +36,7 @@
         <div class="col-md-3 left_col">
           <div class="left_col scroll-view">
             <div class="navbar nav_title" style="border: 0;">
-              <a href="index.html" class="site_title"><i class="fa fa-bitcoin"></i> <span>Tron Monitor</span></a>
+              <a href="index.html" class="site_title"><i class="fa fa-bitcoin"></i> <span>Monitor</span></a>
             </div>
 
             <div class="clearfix"></div>
@@ -67,14 +67,6 @@
                 <a id="menu_toggle"><i class="fa fa-bars"></i></a>
               </div>
 
-              <ul class="nav navbar-nav navbar-right">
-                <li class="">
-                  <a href="javascript:;" class="user-profile dropdown-toggle" aria-expanded="false">
-                    <img src="images/tron1.png" alt="">
-                  </a>
-                </li>
-
-              </ul>
             </nav>
           </div>
         </div>
@@ -172,7 +164,7 @@
         <!-- footer content -->
         <footer>
           <div class="pull-right">
-            Tron Monitor
+            Monitor
           </div>
           <div class="clearfix"></div>
         </footer>
