--- a/static/production/index.html
+++ b/static/production/index.html
@@ -61,7 +61,7 @@
 <div class="col-md-12 col-sm-12 col-xs-12">
     <div class="x_panel">
         <div class="x_content">
-            <a class="btn btn-app" onclick="refresh()">
+            <a id="refresh" class="btn btn-app" onclick="refresh()">
                 <i class="fa fa-repeat"></i> 刷新
             </a>
         </div>
