--- a/static/production/index.html
+++ b/static/production/index.html
@@ -49,6 +49,16 @@
 
 <body>
 <!-- page content -->
+<div class="col-md-12 col-sm-12 col-xs-12" id="server">
+    <div class="x_panel">
+        <label class="col-md-12 col-sm-12 col-xs-12
+        control-label">服务器分组标签</label>
+
+        <div id="serverRadios" class="x_content">
+        </div>
+    </div>
+</div>
+
 <div class="col-md-12 col-sm-12 col-xs-12">
     <div class="x_panel">
         <table id="showdatatable"
@@ -116,8 +126,6 @@
 <script src="../vendors/jquery.tagsinput/src/jquery.tagsinput.js"></script>
 <!-- Switchery -->
 <script src="../vendors/switchery/dist/switchery.min.js"></script>
-
-<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
