--- a/static/production/index.html
+++ b/static/production/index.html
@@ -51,10 +51,19 @@
 <!-- page content -->
 <div class="col-md-12 col-sm-12 col-xs-12" id="server">
     <div class="x_panel">
-        <label class="col-md-12 col-sm-12 col-xs-12
+        <label class="col-md-6 col-sm-6 col-xs-6
         control-label">服务器分组标签</label>
 
         <div id="serverRadios" class="x_content">
+            <div class="animated flipInY col-lg-6 col-md-6 col-sm-6 col-xs-6
+        pull-right">
+                <div class="tile-stats">
+                    <div class="icon"><i class="fa fa-caret-square-o-right"></i>
+                    </div>
+                    <div class="count" id="runTime">0s</div>
+                    <p>监控程序已运行了</p>
+                </div>
+            </div>
         </div>
     </div>
 </div>
@@ -126,6 +135,8 @@
 <script src="../vendors/jquery.tagsinput/src/jquery.tagsinput.js"></script>
 <!-- Switchery -->
 <script src="../vendors/switchery/dist/switchery.min.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
