--- a/static/production/index.html
+++ b/static/production/index.html
@@ -157,6 +157,9 @@
 <script src="../vendors/pdfmake/build/pdfmake.min.js"></script>
 <script src="../vendors/pdfmake/build/vfs_fonts.js"></script>
 
+<!-- jQuery Sparklines -->
+<script src="../vendors/jquery-sparkline/dist/jquery.sparkline.min.js"></script>
+
 <script src="index.js"></script>
 
 </body>
