--- a/static/production/index.html
+++ b/static/production/index.html
@@ -78,7 +78,7 @@
                 <td>NowBlockNum</td>
                 <td>NowBlockHash</td>
                 <td>LastSolidityBlockNum</td>
-                <td>Ping</td>
+                <td>Ping(ms)</td>
                 <td>Message</td>
             </tr>
             </thead>
