--- a/static/production/index.html
+++ b/static/production/index.html
@@ -79,6 +79,7 @@
                 <td>NowBlockHash</td>
                 <td>LastSolidityBlockNum</td>
                 <td>Ping(ms)</td>
+                <td>PingMonitor(ms)</td>
                 <td>Message</td>
             </tr>
             </thead>
