--- a/static/production/index.html
+++ b/static/production/index.html
@@ -125,8 +125,8 @@
                         <td>NowBlockNum</td>
                         <td>NowBlockHash</td>
                         <td>LastSolidityBlockNum</td>
-                        <td>Ping(ms)</td>
-                        <td>PingMonitor(ms)</td>
+                        <td>gRPC</td>
+                        <td>gRPCMonitor</td>
                         <td>Message</td>
                     </tr>
                     </thead>
