:bug:fix web socket close error

--- a/static/production/index.html
+++ b/static/production/index.html
@@ -30,6 +30,11 @@
     <link href="../vendors/bootstrap-daterangepicker/daterangepicker.css"
           rel="stylesheet">
 
+    <!-- PNotify -->
+    <link href="../vendors/pnotify/dist/pnotify.css" rel="stylesheet">
+    <link href="../vendors/pnotify/dist/pnotify.buttons.css" rel="stylesheet">
+    <link href="../vendors/pnotify/dist/pnotify.nonblock.css" rel="stylesheet">
+
     <!-- Datatables -->
     <link href="../vendors/datatables.net-bs/css/dataTables.bootstrap.min.css"
           rel="stylesheet">
@@ -215,6 +220,11 @@
 <script src="../vendors/jszip/dist/jszip.min.js"></script>
 <script src="../vendors/pdfmake/build/pdfmake.min.js"></script>
 <script src="../vendors/pdfmake/build/vfs_fonts.js"></script>
+
+<!-- PNotify -->
+<script src="../vendors/pnotify/dist/pnotify.js"></script>
+<script src="../vendors/pnotify/dist/pnotify.buttons.js"></script>
+<script src="../vendors/pnotify/dist/pnotify.nonblock.js"></script>
 
 <!-- jQuery Sparklines -->
 <script src="../vendors/jquery-sparkline/dist/jquery.sparkline.min.js"></script>
