--- a/static/production/login.html
+++ b/static/production/login.html
@@ -20,6 +20,11 @@
 
     <!-- Custom Theme Style -->
     <link href="../build/css/custom.min.css" rel="stylesheet">
+
+      <!-- PNotify -->
+      <link href="../vendors/pnotify/dist/pnotify.css" rel="stylesheet">
+      <link href="../vendors/pnotify/dist/pnotify.buttons.css" rel="stylesheet">
+      <link href="../vendors/pnotify/dist/pnotify.nonblock.css" rel="stylesheet">
   </head>
 
   <body class="login">
@@ -39,31 +44,18 @@
                 <input type="password"  id="password" class="form-control" placeholder="Password" required="" />
               </div>
               <div>
-                <a class="btn btn-default submit" id="submit" href="index.html" onclick="return check(this.form);">Log in</a>
-                <a class="reset_pass" href="#">Lost your password?</a>
+                <a class="btn btn-default submit" id="submit"  onclick="return check(this.form);">Log in</a>
+
               </div>
 
-              <div class="clearfix"></div>
 
-              <div class="separator">
-                <p class="change_link">New to site?
-                  <a href="#signup" class="to_register"> Create Account </a>
-                </p>
-
-                <div class="clearfix"></div>
-                <br />
-
-                <div>
-                  <h1><i class="fa fa-paw"></i> Gentelella Alela!</h1>
-                  <p>©2016 All Rights Reserved. Gentelella Alela! is a Bootstrap 3 template. Privacy and Terms</p>
-                </div>
-              </div>
             </form>
           </section>
         </div>
 
       </div>
     </div>
+    <script src="js/global_paramter.js"></script>
     <script>
         //验证表单是否为空，若为空则将焦点聚焦在input表单上，否则表单通过，登录成功
         function check(form) {
@@ -71,13 +63,18 @@
             var password = $("#password");
             accountName = accountName.val();
             password = password.val();
+            //alert("accountName"+accountName);
+            //alert("password"+password);
+
             if (!accountName || accountName == "") {
-                showMsg("请输入用户名");
+                showMsg('请输入用户名','error');
+
                 form.accountName.focus();
                 return false;
             }
             if (!password || password == "") {
-                showMsg("请输入密码");
+                showMsg('请输入密码','error');
+
                 form.password.focus();
                 return false;
             }
@@ -88,22 +85,30 @@
                 type: "GET",
                 dataType: "json",
                 success: function (data) {
-                    if (data == "success") { //判断返回值，这里根据的业务内容可做调整
+                    if (data === "success") { //判断返回值，这里根据的业务内容可做调整
+                        showMsg('登录成功','success');
+
                         window.location.href = serverHost+"/static/production/";//指向登录的页面地址
                     } else {
-                        showMsg(data.message);//显示登录失败的原因
+                        showMsg('登录失败','error');
+
                         return false;
                     }
                 },
                 error: function (data) {
-                    showMsg(data.message);
+                    showMsg('登录失败','error');
+
                 }
             });
         }
 
         //错误信息提醒
-        function showMsg(msg) {
-            $("#CheckMsg").text(msg);
+        function showMsg(title, type) {
+            new PNotify({
+                title: title,
+                type: type,
+                styling: 'bootstrap3'
+            });
         }
 
 
@@ -125,5 +130,10 @@
             }
         });
     </script>
+
+    <!-- PNotify -->
+    <script src="../vendors/pnotify/dist/pnotify.js"></script>
+    <script src="../vendors/pnotify/dist/pnotify.buttons.js"></script>
+    <script src="../vendors/pnotify/dist/pnotify.nonblock.js"></script>
   </body>
 </html>
