:heavy_plus_sign:add axios js dependency

--- a/static/production/index.html
+++ b/static/production/index.html
@@ -221,9 +221,7 @@
 <!-- Switchery -->
 <script src="../vendors/switchery/dist/switchery.min.js"></script>
 
-<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-
-<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="../node_modules/axios/dist/axios.min.js"></script>
 
 <!-- Datatables -->
 <script src="../vendors/datatables.net/js/jquery.dataTables.min.js"></script>
