--- a/static/production/settings.html
+++ b/static/production/settings.html
@@ -162,9 +162,7 @@
 <!-- Switchery -->
 <script src="../vendors/switchery/dist/switchery.min.js"></script>
 
-<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-
-<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="../node_modules/axios/dist/axios.min.js"></script>
 
 <!-- PNotify -->
 <script src="../vendors/pnotify/dist/pnotify.js"></script>
