:recycle:common nav bar

--- a/static/production/index.html
+++ b/static/production/index.html
@@ -60,68 +60,7 @@
 <body class="nav-md">
 <div class="container body">
     <div class="main_container">
-        <div class="col-md-3 left_col">
-            <div class="left_col scroll-view">
-                <div class="navbar nav_title" style="border: 0;">
-                    <a href="index.html" class="site_title"><i class="fa
-                    fa-bitcoin"></i> <span>Monitor</span></a>
-                </div>
-
-                <div class="clearfix"></div>
-
-                <!-- sidebar menu -->
-                <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
-                    <div class="menu_section">
-                        <h3>General</h3>
-                        <ul class="nav side-menu">
-                            <li><a><i class="fa fa-home"></i> Dashboard <span class="fa fa-chevron-down"></span></a>
-                                <ul class="nav child_menu">
-                                    <li><a href="index.html">Servers</a></li>
-                                </ul>
-                            </li>
-                            <li><a><i class="fa fa-edit"></i> Settings <span
-                                    class="fa fa-chevron-down"></span></a>
-                                <ul class="nav child_menu">
-                                    <li><a href="settings.html">Servers</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-
-                </div>
-                <!-- /sidebar menu -->
-
-            </div>
-        </div>
-
-        <!-- top navigation -->
-        <div class="top_nav">
-            <div class="nav_menu">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="">
-                        <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                            Tron
-                            <span class=" fa fa-angle-down"></span>
-                        </a>
-                        <ul class="dropdown-menu dropdown-usermenu pull-right">
-
-
-                            <li>
-
-                                <a class="btn btn-default submit" id="submit"  onclick="return logout(this.form);"> Log Out</a>
-
-                            </li>
-                        </ul>
-                    </li>
-
-                </ul>
-                <nav>
-                    <div class="nav toggle">
-                        <a id="menu_toggle"><i class="fa fa-bars"></i></a>
-                    </div>
-                </nav>
-            </div>
-        </div>
+        <script src="nav.js"></script>
         <!-- /top navigation -->
 
         <!-- page content -->
