--- a/static/production/index.html
+++ b/static/production/index.html
@@ -90,9 +90,11 @@
                         <td>NowBlockNum</td>
                         <td>NowBlockHash</td>
                         <td>LastSolidityBlockNum</td>
+                        <td>TotalTransaction</td>
                         <td>gRPC</td>
                         <td>gRPCMonitor</td>
                         <td>Message</td>
+
                     </tr>
                     </thead>
 
