:lipstick:update the web show

--- a/static/production/nav.html
+++ b/static/production/nav.html
@@ -52,15 +52,17 @@ http://tool.chinaz.com/Tools/Html_Js.aspx
             <div class="menu_section">
                 <h3>General</h3>
                 <ul class="nav side-menu">
-                    <li><a><i class="fa fa-home"></i> Dashboard <span class="fa fa-chevron-down"></span></a>
+                    <li><a><i class="fa fa-home"></i> 仪表盘 <span class="fa
+                    fa-chevron-down"></span></a>
                         <ul class="nav child_menu">
-                            <li><a href="index.html">Servers</a></li>
+                            <li><a href="index.html">分析页</a></li>
+                            <li><a href="monitor.html">监控页</a></li>
                         </ul>
                     </li>
-                    <li><a><i class="fa fa-edit"></i> Settings <span
+                    <li><a><i class="fa fa-edit"></i> 配置 <span
                             class="fa fa-chevron-down"></span></a>
                         <ul class="nav child_menu">
-                            <li><a href="settings.html">Servers</a></li>
+                            <li><a href="settings.html">服务器分组配置</a></li>
                         </ul>
                     </li>
                 </ul>
