--- a/static/production/monitor.html
+++ b/static/production/monitor.html
@@ -20,6 +20,8 @@
     <link href="../vendors/nprogress/nprogress.css" rel="stylesheet">
     <!-- iCheck -->
     <link href="../vendors/iCheck/skins/flat/green.css" rel="stylesheet">
+    <!-- Switchery -->
+    <link href="../vendors/switchery/dist/switchery.min.css" rel="stylesheet">
 
     <!-- bootstrap-progressbar -->
     <link href="../vendors/bootstrap-progressbar/css/bootstrap-progressbar-3.3.4.min.css"
@@ -66,28 +68,6 @@
         <!-- page content -->
         <div class="right_col" role="main">
 
-            <!--监控信息-->
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="x_panel">
-                        <div class="x_title">
-                            <h2>监控信息</h2>
-                            <div class="clearfix"></div>
-                        </div>
-                        <div class="x_content">
-                            <div class="animated flipInY col-lg-4 col-md-4
-                            col-sm-4 col-xs-4">
-                                <div class="tile-stats">
-                                    <div class="count" id="runTime">0s</div>
-                                    <small>&nbsp;&nbsp;监控程序已运行了</small>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!--/监控信息-->
-
             <!--服务器分组标签-->
             <div class="row">
                 <div class="col-md-12">
@@ -111,48 +91,29 @@
                 <div class="col-md-12">
                     <div class="x_panel">
                         <div class="x_title">
-                            <h2>总览数据</h2>
+                            <h2>监控状态</h2>
                             <div class="clearfix"></div>
                         </div>
                         <div class="x_content">
-                            <div class="animated flipInY col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                            <div class="animated flipInY col-lg-4 col-md-4
+                            col-sm-6 col-xs-12">
                                 <div class="tile-stats">
-                                    <div class="icon"><i class="fa
-                                    fa-tasks"></i></div>
-                                    <div class="count green">179</div>
-                                    <h3>服务器数量</h3>
-                                    <p><span
-                                            class="green">178 </span>活跃 / <span
-                                            class="red"
-                                    >1 </span>超时</p>
-                                </div>
-                            </div>
-
-                            <div class="animated flipInY col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                                <div class="tile-stats">
-                                    <div class="icon"><i class="fa
-                                    fa-minus-square-o"></i></div>
-                                    <div class="count green">179</div>
-                                    <h3>当前块</h3>
-                                    <p>哈希：0000000000077cc700077cc7c7c7...</p>
-                                </div>
-                            </div>
-
-                            <div class="animated flipInY col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                                <div class="tile-stats">
-                                    <div class="icon"><i class="fa fa-minus-square"></i></div>
-                                    <div class="count green">179</div>
-                                    <h3>最新固化块</h3>
+                                    <p>&nbsp;</p>
+                                    <h3 data-toggle="tooltip" data-placement="top"
+                                        title="每分钟检测一次，连续3次超时（>5000ms）并且上一次报警时间1小时以内会钉钉报警，恢复后会钉钉提醒">gRPC超时监控</h3>
+                                    <p>已监控100次，报警1次，恢复1次</p>
                                     <p>&nbsp;</p>
                                 </div>
                             </div>
 
-                            <div class="animated flipInY col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                            <div class="animated flipInY col-lg-4 col-md-4
+                            col-sm-6 col-xs-12">
                                 <div class="tile-stats">
-                                    <div class="icon"><i class="fa
-                                    fa-bar-chart"></i></div>
-                                    <div class="count green">179</div>
-                                    <h3>交易总数</h3>
+                                    <p>&nbsp;</p>
+                                    <h3 data-toggle="tooltip" data-placement="top"
+                                        title="每分钟检测一次，Miss
+                                   Block比上一次值大就会钉钉报警，直到不会继续增大">Witness Miss Block监控</h3>
+                                    <p>已监控100次，报警1次</p>
                                     <p>&nbsp;</p>
                                 </div>
                             </div>
@@ -163,23 +124,77 @@
             <!--/总览数据-->
 
             <div class="x_panel">
-                <table id="showdatatable"
-                       class="table table-striped table-bordered">
-                    <thead>
-                    <tr>
-                        <td>Address</td>
-                        <td>NowBlockNum</td>
-                        <td>NowBlockHash</td>
-                        <td>LastSolidityBlockNum</td>
-                        <td>gRPC</td>
-                        <td>gRPCMonitor</td>
-                        <td>Message</td>
-                    </tr>
-                    </thead>
+                <div class="" role="tabpanel" data-example-id="togglable-tabs">
+                    <ul id="myTab" class="nav nav-tabs bar_tabs" role="tablist">
+                        <li role="presentation" class="active"><a
+                                href="#gRPCContent" id="home-tab" role="tab"
+                                data-toggle="tab"
+                                aria-expanded="true">gRPC超时监控</a>
+                        </li>
+                        <li role="presentation" class="" onclick="initEchartLine()
+"><a
+                                href="#WitnessMissBlockContent" role="tab"
+                                id="profile-tab" data-toggle="tab"
+                                aria-expanded="false">Witness Miss Block监控</a>
+                        </li>
+                    </ul>
 
-                    <tbody>
-                    </tbody>
-                </table>
+                    <div id="myTabContent" class="tab-content">
+                        <div role="tabpanel" class="tab-pane fade active in"
+                             id="gRPCContent" aria-labelledby="home-tab">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="x_panel">
+                                        <div class="x_title">
+                                            <h2>127.0.0.1:50051</h2>
+                                            <div class="clearfix"></div>
+                                        </div>
+                                        <div class="x_content">
+                                            <div id="eee"
+                                                 style="height:260px;"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="x_panel">
+                                        <div class="x_title">
+                                            <h2>127.0.0.1:50051</h2>
+                                            <div class="clearfix"></div>
+                                        </div>
+                                        <div class="x_content">
+                                            <div id="bbb"
+                                                 style="height:260px;"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div role="tabpanel" class="tab-pane fade"
+                             id="WitnessMissBlockContent"
+                             aria-labelledby="profile-tab">
+
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="x_panel">
+                                        <div class="x_title">
+                                            <h2>127.0.0.1:50051</h2>
+                                            <div class="clearfix"></div>
+                                        </div>
+                                        <div class="x_content">
+                                            <div id="eeee"
+                                                 style="height:260px;"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <!-- /page content -->
@@ -269,12 +284,16 @@
 <script src="../vendors/jquery-sparkline/dist/jquery.sparkline.min.js"></script>
 
 <script src="js/global_paramter.js"></script>
-<script src="index.js"></script>
+<script src="monitor.js"></script>
 
 <!-- PNotify -->
 <script src="../vendors/pnotify/dist/pnotify.js"></script>
 <script src="../vendors/pnotify/dist/pnotify.buttons.js"></script>
 <script src="../vendors/pnotify/dist/pnotify.nonblock.js"></script>
+
+<!-- ECharts -->
+<script src="../vendors/echarts/dist/echarts.min.js"></script>
+<script src="../vendors/echarts/map/js/world.js"></script>
 </body>
 
 
