:recycle:modify user router

--- a/static/production/login.html
+++ b/static/production/login.html
@@ -81,7 +81,8 @@
 
             //这里为用ajax获取用户信息并进行验证，如果账户密码不匹配则登录失败，如不需要验证用户信息，这段可不写
             $.ajax({
-                url: serverHost+"/v1/user/info/tag/" + accountName + "/" + password,// 获取自己系统后台用户信息接口
+                url: serverHost+"/v1/user/login/" + accountName + "/" +
+                password,// 获取自己系统后台用户信息接口
                 type: "GET",
                 dataType: "json",
                 success: function (data) {
