:sparkles:monitor page:support latest data of one day;gRPC monitor data & Witness Miss Block monitor data

--- a/static/production/monitor.html
+++ b/static/production/monitor.html
@@ -129,10 +129,9 @@
                         <li role="presentation" class="active"><a
                                 href="#gRPCContent" id="home-tab" role="tab"
                                 data-toggle="tab"
-                                aria-expanded="true">gRPC超时监控</a>
+                                aria-expanded="true" onclick="initEChartLine()">gRPC超时监控</a>
                         </li>
-                        <li role="presentation" class="" onclick="initEchartLine()
-"><a
+                        <li role="presentation" class="" onclick="initEChartLine()"><a
                                 href="#WitnessMissBlockContent" role="tab"
                                 id="profile-tab" data-toggle="tab"
                                 aria-expanded="false">Witness Miss Block监控</a>
@@ -142,55 +141,12 @@
                     <div id="myTabContent" class="tab-content">
                         <div role="tabpanel" class="tab-pane fade active in"
                              id="gRPCContent" aria-labelledby="home-tab">
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <div class="x_panel">
-                                        <div class="x_title">
-                                            <h2>127.0.0.1:50051</h2>
-                                            <div class="clearfix"></div>
-                                        </div>
-                                        <div class="x_content">
-                                            <div id="eee"
-                                                 style="height:260px;"></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
 
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <div class="x_panel">
-                                        <div class="x_title">
-                                            <h2>127.0.0.1:50051</h2>
-                                            <div class="clearfix"></div>
-                                        </div>
-                                        <div class="x_content">
-                                            <div id="bbb"
-                                                 style="height:260px;"></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
                         </div>
 
                         <div role="tabpanel" class="tab-pane fade"
                              id="WitnessMissBlockContent"
                              aria-labelledby="profile-tab">
-
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <div class="x_panel">
-                                        <div class="x_title">
-                                            <h2>127.0.0.1:50051</h2>
-                                            <div class="clearfix"></div>
-                                        </div>
-                                        <div class="x_content">
-                                            <div id="eeee"
-                                                 style="height:260px;"></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
 
                         </div>
                     </div>
