:sparkles:support all nodes search

--- a/static/production/nav.html
+++ b/static/production/nav.html
@@ -57,6 +57,7 @@ http://tool.chinaz.com/Tools/Html_Js.aspx
                         <ul class="nav child_menu">
                             <li><a href="index.html">分析页</a></li>
                             <li><a href="monitor.html">监控页</a></li>
+                            <li><a href="nodes.html">节点数量</a></li>
                         </ul>
                     </li>
                     <li><a><i class="fa fa-edit"></i> 配置 <span
