:sparkles:add visitor count

--- a/static/production/index.html
+++ b/static/production/index.html
@@ -188,7 +188,8 @@
         <!-- footer content -->
         <footer>
             <div class="pull-right">
-                Monitor</a>
+                <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+                <span id="busuanzi_container_site_pv">本站总访问量<span id="busuanzi_value_site_pv"></span>次</span>
             </div>
             <div class="clearfix"></div>
         </footer>
